# AskAny

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  .mcp_sse.json  .mcp_web.json  .pgpass  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.dev  Makefile  README.md  README_CN.md  SETUP.md  SETUP_POSTGRESQL.md  UV_SETUP.md  deployment.md  docker-compose.dev.yml  langfuse_improvements.md  mcp.md  pyproject.toml  roadmap.md
.cursor/rules/docs/: RULE.md
askany/: __init__.py  chinese.py  config.py  main.py  rerank.py
askany/api/: __init__.py  server.py
askany/cache/: __init__.py  qa_cache.py
askany/ingest/: __init__.py  custom_keyword.py  custom_keyword_index.py  ingest.py  json_parser.py  keyword_extract_from_llm.py  keyword_extract_from_tfidf.py  keyword_extract_wrapper.py  markdown_parser.py  vector_store.py
askany/memory/: __init__.py  mem0_adapter.py
askany/metrics/: __init__.py  registry.py  timing.py
askany/observability/: __init__.py  langfuse_setup.py  ragas_eval.py
askany/prompts/: __init__.py  prompt_manager.py  prompts_cn.py  prompts_en.py
askany/rag/: __init__.py  faq_query_engine.py  lightrag_adapter.py  lightrag_ingest.py  lightrag_merge.py  provenance.py  query_parser.py  rag_query_engine.py  router.py
askany/vllm/: __init__.py  vllm.py
askany/workflow/: AnalysisRelated_langchain.py  FinalSummaryLlm_complete.py  FinalSummaryLlm_langchain.py  LocalFileSearchTool.py  SubProblemGenerator.py  SummaryFromLlm.py  WebSearchTool.py  __init__.py  client_langchain.py  firstStageRelevant_langchain.py  middle_result_recorder.py  min_langchain_agent.py  previousRelevant.py  rewriteRetrive_langchain.py  token_control.py  traslate.py  visual_workflow.py  visual_workflow_langgraph.py  workflow_filter.py  workflow_langgraph.py  workflow_llamaindex.py  workflow_server.py  workflow_server_test.py
askany_mcp/: .env.example  CHECKLIST.md  HTTP_SERVER.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  debug_query.py  server.py  server_fastapi.py  server_http.py  server_sse.py  test_db_query.py  test_direct_query.py  test_fastapi_client.py  test_minimal.py  test_server.py
dev_readme/: database.md  docker-compose.md  faq.md  hnsw.md  lightrag-cn.md  lightrag.md  python_lint.md  script.sh  sse_streaming_review.md
dev_readme/ai_chats/: LocalFileSearchTool.md  agent.md  cursor_text_search_config.md  embedding_model.md  jieba.md  offline_model_loading.md  rag.md  rerank.md  rerank_usage_analysis.md  second_chat.md  test.md  todo.md  vllm.md
dev_readme/memory/: mem0.md  mem0_improvements.md
dev_readme/rag/: rag_github.md
docs/: metrics_improvements.md  metrics_review.md
images/: all_paths.html  workflow.mmd
test/: jieba_test.py  test_faq_query_engine.py  test_lightrag_e2e_comparison.py  test_lightrag_merge.py  test_lightrag_retrieval.py  test_mem0.py  test_metrics.py  test_min_langchain_agent.py  test_observability.py  test_qa_cache.py  test_qa_cache_integration.py  test_ragas_context.py  test_ragas_e2e.py  test_router.py  test_streaming.py  test_workflow_client_call.py  tok_stl.ipynb  vllm_structured_chat.py  文件搜索工具对比分析.md
tool/: README_vector_data.md  README_vector_validation.md  backup_and_clear.py  check_dump_version.py  check_insert_progress.py  check_insert_progress.sh  clear_all_data.py  compare_table_data.py  delete_migrated_docs_by_id.py  delete_migrated_docs_by_id.sql  dw_model.py  export_keywords.py  export_vector_data.py  hanlp_tokenizer.py  import_vector_data.py  ingest_check.py  keyword_utils.py  langdetect.py  migrate_docs_by_date.py  migrate_docs_by_date.sql  migrate_docs_by_id.sql  query_direct_from_vector_test.py  query_hnsw_structure.py  query_test.py  test_embedding.py  test_embedding_simple.py  test_merge_e2e.py  test_reranker_simple.py  visualize_graph.py
(+17 files in other folders)
