[project]
name = "askany"
version = "0.1.0"
description = "A Q&A assistant for operations, development, and testing with RAG support"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-vector-stores-postgres>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "jieba>=0.42.1",
    "sentence-transformers>=2.2.0",
    "ruff>=0.14.6",
    "huggingface-hub>=0.36.0",
    "sentencepiece>=0.2.1",
    "httpx[socks]>=0.28.1",
    "hanlp>=2.1.3",
    "scikit-learn>=1.7.2",
    "llama-index-tools-bing-search>=0.4.1",
    "llama-index-utils-workflow>=0.5.1",
    "psycopg2>=2.9.11",
    "llama-index-workflows==2.11.5",
    "llama-index-tools-duckduckgo>=0.4.1",
    "duckduckgo-search>=6.4.2",
    "langgraph>=1.0.5",
    "langserve[all]>=0.3.3",
    "langsmith>=0.5.0",
    "langchain-openai>=1.1.6",
    "langgraph-sdk>=0.3.0",
    "langchain>=1.2.0",
    "deepl>=1.27.0",
    "mcp>=1.26.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.6.5",
    "mem0ai>=0.1.0",
    "cachetools>=7.0.1",
    "gptcache>=0.1.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[project.optional-dependencies]
lightrag = [
    "lightrag-hku>=1.4.9.8",
    "nest-asyncio>=1.5.0",
]
observability = [
    "langfuse>=3.14.0",
    "ragas>=0.4.0",
    "openinference-instrumentation-llama-index>=3.0.0",
    "opentelemetry-sdk>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.ruff]
line-length = 88
extend-exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "W505", "E402"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
